--- a/src/app/paginas/principal/principal.page.html
+++ b/src/app/paginas/principal/principal.page.html
@@ -7,4 +7,18 @@
       <ion-title>{{textosIdioma.titulo}}</ion-title>  
     </ion-buttons>
   </ion-toolbar>
+  <ion-fab vertical="top" horizontal="end" slot="fixed">
+    <ion-fab-button size='small'>
+      <ion-icon name="menu"></ion-icon>
+    </ion-fab-button>
+    <ion-fab-list side="bottom">
+      <ion-fab-button>
+        <ion-icon name="analytics"></ion-icon>
+      </ion-fab-button>
+      <ion-fab-button>
+        <ion-icon name="person"></ion-icon>
+      </ion-fab-button>
+     
+    </ion-fab-list>
+  </ion-fab>
 </ion-header>
