conexion base datos

--- a/src/app/paginas/principal/principal.page.html
+++ b/src/app/paginas/principal/principal.page.html
@@ -16,9 +16,13 @@
         <ion-icon name="analytics"></ion-icon>
       </ion-fab-button>
       <ion-fab-button>
-        <ion-icon name="person"></ion-icon>
+        <ion-icon name="body"></ion-icon>
       </ion-fab-button>
-     
-    </ion-fab-list>
+      
+    </ion-fab-list>    
   </ion-fab>
 </ion-header>
+
+<ion-content>
+
+</ion-content>
