usuario empresa configuracion

--- a/src/app/paginas/usuario-empresa/usuario-empresa.page.html
+++ b/src/app/paginas/usuario-empresa/usuario-empresa.page.html
@@ -12,6 +12,10 @@
       </ion-title>
       
     </ion-buttons>
+    <ion-searchbar debounce="500"  placeholder={{textosIdioma.apellidosBuscar}}
+    [(ngModel)]= 'patronBuscar'
+    (change)='buscarItems()'> </ion-searchbar>
+  
   </ion-toolbar>
   <ion-fab vertical="top" horizontal="end" slot="fixed">
     <ion-fab-button size='small'>
