config usuario empresa

--- a/src/app/paginas/usuario-empresa/usuario-empresa.page.html
+++ b/src/app/paginas/usuario-empresa/usuario-empresa.page.html
@@ -14,7 +14,7 @@
     </ion-buttons>
     <ion-searchbar debounce="500"  placeholder={{textosIdioma.apellidosBuscar}}
     [(ngModel)]= 'patronBuscar'
-    (change)='buscarItems()'> </ion-searchbar>
+    (ionChange)='buscarItems()'> </ion-searchbar>
   
   </ion-toolbar>
   <ion-fab vertical="top" horizontal="end" slot="fixed">
